# task-queue

./: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.ps1  build.rs  build.sh  start.bat  start.sh  stop.sh
.cursor/: rules
.github/: copilot-instructions.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: args.rs  mod.rs
cli/src/cli/commands/: config.rs  mod.rs  projects.rs  server.rs  tasks.rs  workflows.rs
cli/src/client/: mod.rs
cli/src/config/: mod.rs
cli/src/output/: mod.rs
cli/src/tui/: mod.rs
cli/src/utils/: mod.rs
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  test.html  vite.config.js
dashboard/public/: api-client.js  app.js  index.html  styles.css
dashboard/src/: App.js  App.vue  main.js  style.css
dashboard/src/api/: client.js
dashboard/src/components/: CreateApiKeyModal.vue  UserAvatar.js  UserAvatar.vue
dashboard/src/stores/: apiKeys.js  auth.js
dashboard/src/views/: ApiKeys.js  ApiKeys.vue  Console.js  Console.vue  Dependencies.js  Dependencies.vue  Metrics.js  Metrics.vue  Overview.js  Overview.vue  Projects.js  Projects.vue  Tasks.js  Tasks.vue  Workflows.js  Workflows.vue
devops/: Dockerfile  Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prometheus.yml
devops/k8s/: deployment.yaml  monitoring.yaml  rbac.yaml
devops/scripts/: docker-build.sh
docs/: API_DOCUMENTATION.md  COMPLETE_DOCUMENTATION.md  CRITICAL_TESTING_REQUIREMENTS.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_WORKFLOW.md  DOCKER_README.md  TESTING_EXECUTION_GUIDE.md  VECTORIZER_INTEGRATION.md
docs/implementations/: authentication-authorization-technical-spec.md  cache-system-technical-spec.md  cli-implementation-technical-spec.md  python-sdk-technical-spec.md  rate-limiting-technical-spec.md  structured-logging-technical-spec.md  typescript-sdk-technical-spec.md  websocket-support-technical-spec.md
scripts/: run-tests.ps1  run-tests.sh  start-mcp.sh  validate-docs.sh
sdks/python/: IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml
sdks/python/examples/: basic_usage.py
sdks/python/taskqueue/: __init__.py  cli.py  client.py  exceptions.py  models.py
sdks/python/tests/: __init__.py  test_cli.py  test_client.py  test_models.py
sdks/typescript/: README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
sdks/typescript/examples/: basic-usage.ts  browser-usage.ts  node-usage.ts
sdks/typescript/src/: client.ts  index.ts
sdks/typescript/src/client/: base-client.ts  browser-client.ts  node-client.ts
sdks/typescript/src/models/: project.ts  task.ts  workflow.ts
sdks/typescript/src/utils/: error-handling.ts
sdks/typescript/tests/: client.test.ts  environment.test.ts  error-handling.test.ts  integration-setup.ts  integration.test.ts  models.test.ts  performance.test.ts  security.test.ts  setup.ts
src/: cache.rs  client.rs  config.rs  core.rs  error.rs  lib.rs  logging.rs  main.rs  mcp.rs  metrics.rs  rate_limiting.rs  server.rs  storage.rs  vectorizer.rs  websocket.rs
src/auth/: api_keys.rs  handlers.rs  jwt.rs  mfa.rs  middleware.rs  mod.rs  oauth.rs  permissions.rs  roles.rs  sessions.rs
src/models/: mod.rs  permission.rs  session.rs  user.rs
